apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_meeting_summary__outcome_unavailable.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 449
expression: value
---
{
  "detail": "404 Not Found",
  "kind": "unavailable"
}
